<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SensorFragment">

    <TextView
        android:id="@+id/tvTitleSensor"
        android:layout_width="206dp"
        android:layout_height="47dp"
        android:layout_marginTop="32dp"
        android:capitalize="characters"
        android:fontFamily="serif"
        android:text="@string/title"
        android:textAllCaps="true"
        android:textColor="@color/colorAccent"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvHum"
        android:layout_width="145dp"
        android:layout_height="62dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="120dp"
        android:fontFamily="serif"
        android:text="@string/humidity"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvPre"
        android:layout_width="124dp"
        android:layout_height="54dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="24dp"
        android:fontFamily="serif"
        android:text="Pressure"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvHum" />

    <TextView
        android:id="@+id/tvTemp"
        android:layout_width="124dp"
        android:layout_height="47dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="24dp"
        android:fontFamily="serif"
        android:text="@string/temperature"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvPre" />

    <ImageView
        android:id="@+id/imgHum"
        android:layout_width="43dp"
        android:layout_height="38dp"
        android:layout_marginStart="136dp"
        android:layout_marginTop="120dp"
        android:layout_marginEnd="28dp"
        android:contentDescription="@string/humidity"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/tvHum"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/humidity" />

    <ImageView
        android:id="@+id/imgPre"
        android:layout_width="44dp"
        android:layout_height="43dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="48dp"
        android:layout_marginEnd="28dp"
        android:contentDescription="@string/pressure"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/tvPre"
        app:layout_constraintTop_toBottomOf="@+id/imgHum"
        app:srcCompat="@drawable/pressure" />

    <ImageView
        android:id="@+id/imgTemp"
        android:layout_width="47dp"
        android:layout_height="48dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="28dp"
        android:contentDescription="@string/temperature"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/tvTemp"
        app:layout_constraintTop_toBottomOf="@+id/imgPre"
        app:srcCompat="@drawable/temperature" />

    <Button
        android:id="@+id/btnGoAPI"
        android:layout_width="88dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="72dp"
        android:layout_marginBottom="56dp"
        android:text="API"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/btnGuessAltitude"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="88dp"
        android:layout_marginEnd="9dp"
        android:layout_marginBottom="56dp"
        android:text="Guess Altitude"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btnGoAPI"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tvTimeStamp"
        android:layout_width="102dp"
        android:layout_height="48dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="8dp"
        android:fontFamily="serif"
        android:text="time"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.075"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvTemp" />
</android.support.constraint.ConstraintLayout>