<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".APIFragment">

    <!-- TODO: Update blank fragment layout -->

    <TextView
        android:id="@+id/tvTitleAPI"
        android:layout_width="151dp"
        android:layout_height="55dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="8dp"
        android:capitalize="characters"
        android:fontFamily="serif"
        android:text="@string/title2"
        android:textAllCaps="true"
        android:textColor="@color/colorAccent"
        android:textSize="24sp"
        android:typeface="normal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvHumAPI"
        android:layout_width="187dp"
        android:layout_height="87dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="84dp"
        android:fontFamily="serif"
        android:text="@string/humidity"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvPreAPI"
        android:layout_width="187dp"
        android:layout_height="90dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="12dp"
        android:fontFamily="serif"
        android:text="@string/pressure"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvHumAPI" />

    <TextView
        android:id="@+id/tvTempAPI"
        android:layout_width="195dp"
        android:layout_height="69dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="12dp"
        android:text="@string/temperature"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvPreAPI" />

    <ImageView
        android:id="@+id/imgHumAPI"
        android:layout_width="58dp"
        android:layout_height="36dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="92dp"
        android:layout_marginEnd="28dp"
        android:contentDescription="@string/humidity"
        android:src="@drawable/humidity"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.822"
        app:layout_constraintStart_toEndOf="@+id/tvHumAPI"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imgPreAPI"
        android:layout_width="45dp"
        android:layout_height="45dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="28dp"
        android:contentDescription="@string/pressure"
        android:src="@drawable/pressure"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.84"
        app:layout_constraintStart_toEndOf="@+id/tvPreAPI"
        app:layout_constraintTop_toBottomOf="@+id/imgHumAPI" />

    <ImageView
        android:id="@+id/imgTempAPI"
        android:layout_width="50dp"
        android:layout_height="44dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="44dp"
        android:layout_marginEnd="28dp"
        android:contentDescription="@string/temperature"
        android:src="@drawable/temperature"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.813"
        app:layout_constraintStart_toEndOf="@+id/tvTempAPI"
        app:layout_constraintTop_toBottomOf="@+id/imgPreAPI" />

    <Button
        android:id="@+id/btnAsync"
        android:layout_width="90dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="88dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="24dp"
        android:text="Async"
        app:layout_constraintEnd_toStartOf="@+id/btnVolley"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvTempAPI" />

    <Button
        android:id="@+id/btnVolley"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="72dp"
        android:layout_marginEnd="88dp"
        android:text="Volley"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btnAsync"
        app:layout_constraintTop_toBottomOf="@+id/imgTempAPI" />

    <Button
        android:id="@+id/btnBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="148dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="40dp"
        android:text="Sensors"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnAsync"
        app:layout_constraintVertical_bias="0.0" />

</android.support.constraint.ConstraintLayout>